# Offline-Clinic

./: .env  .env.example  .env.production.example  .gitignore  BLUEHOST_DEPLOYMENT.md  CELERY_SETUP.md  DEPLOYMENT_GUIDE.md  POSTMAN_DICOM_TESTING.md  Procfile  README.md  REPORTING_API_GUIDE.md  TODO.md  api_doc.txt  celery_worker.py  check_tables.py  cookies.txt  deploy-dev.sh  deploy-main.sh  dicom_listener.py  init_admin.py  mwl.py  postman_collection.json  pyproject.toml  requirements.txt  run.py  start_celery.sh  start_ngrok_tunnels.sh  start_remote_testing.sh  webhook.py  wsgi.py
.github/workflows/: deploy-dev.yml  deploy-staging.yml  deploy.yml
app/: __init__.py  config.py  extensions.py  middleware.py  seeds.py
app/models/: __init__.py  admin.py  appointment.py  audit_log.py  base.py  clinic.py  dicom.py  dicom_series.py  dicom_study.py  patient.py  prescription.py  report.py  report_template.py  visit.py
app/routes/: __init__.py  (+11 more)
backend/: .gitignore  README.md  pyproject.toml
docs/: Clinic_Management_System_Overview.docx  Offline_Clinic_Overview.docx  Project_Overview.html  api_endpoints.csv  completed_tasks.csv  features_status.csv  frontend-auth-guide.md  pending_tasks.csv  project_overview.csv  roles_permissions.csv
migrations/: seed_templates.py
readme/: ADMIN_SYSTEM_GUIDE.md  API_TESTING_GUIDE.md  FILE_STRUCTURE.md  INTEGRATION_GUIDE.md  MIGRATION_GUIDE.md  MWL_EXPLANATION.md
scripts/: backup.sh  check_dicom_scp_logs.sh  nginx-api-clinic.conf  restore.sh  update_env.sh
tasks/: __init__.py  dicom_tasks.py  report_tasks.py  sync_tasks.py
(+49 files in other folders)
